# winery

./: .gitignore  EDA.ipynb  README.md  airflow.cfg  clear.py  q  review_data.py  wine_data.py
EDA/: embedding.ipynb  train_kg.py
Recbole/: Recbole.py  Recbole_test.ipynb  Untitled-1.ipynb  args.py  basic.yaml  binary.yaml  candid_gen.ipynb  cluster_nns.py  general.yaml  general_before.yaml  inference.py  train.py  utils.py
Recbole/.ipynb_checkpoints/: Recbole_test-checkpoint.ipynb  inference-checkpoint.py
airflow/: airflow-scheduler.err  airflow-webserver.err  airflow.cfg  airflow.db  pyproject.toml
airflow/dags/: batch_train_infer.py  etl.py  hello_world.py  update.py
airflow/logs/scheduler/: latest
code/data/: (심화_1)_Item2Vec_(정답).ipynb  Item2Vec.ipynb  Untitled-1.ipynb  bert_multilabel.ipynb  item_data_gen.ipynb  item_review.ipynb  merge_data.py  prepare_data.py  test.ipynb  utils.py
code/feature_map/: Ageing2idx.json  Black Fruit2idx.json  Citrus2idx.json  Dried Fruit2idx.json  Earthy2idx.json  Floral2idx.json  Microbio2idx.json  Oaky2idx.json  Red Fruit2idx.json  Spices2idx.json  Tree Fruit2idx.json  Tropical2idx.json  Vegetal2idx.json  country2idx.json  grape2idx.json  house2idx.json  idx2Ageing.json  idx2Black Fruit.json  idx2Citrus.json  idx2Dried Fruit.json  idx2Earthy.json  (+22 more)
crawl/: basic_info.py  clear.py  implicit_data.py  review_data.py  save_img.py  wine_data.py
dags/: airflow.db  bash_operator.py  code_update.py  hello_word.py  python_operator.py
data/: Untitled-1.ipynb  regional_styles_url.pkl  review_done.pkl  vine_dic.pkl
front/: Api.js  App.js  Group.js  Home.js  Login.js  Mbti.js  MbtiQ.js  MbtiS.js  Recommend.js  Search.js  Sign.js  StackNavigator.js  StarButton.js  StarRating.js  WineInfo.js  app.json  mapped_idx2item.json  package-lock.json  package.json
models/: model.py
server/: crud.py  crud_mongo.py  data_generator.py  database.py  etl.py  function.py  main.py  mbti.py  models.py  pyproject.toml  requirements.txt  schema.py  topK.ipynb  user_data_generator.ipynb  user_data_generator.py  util.py  utils.py
server/routers/: home_router.py  mbti_router.py  recommend_router.py  temp_router.py  topK.ipynb  user_router.py  wine_router.py
wine/: crud.py  data_generator.py  database.py  main.py  models.py  pyproject.toml  requirements.txt  schema.py
(+106 files in other folders)
