[tool.poetry]
name = "airflow"
version = "0.1.0"
description = ""
authors = ["dhkim77000 <dhkim77000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
apache-airflow = "^2.7.3"
google-cloud-storage = "^2.13.0"
google-cloud-bigquery = "^3.13.0"
google-cloud-bigquery-storage = "^2.23.0"
pymongo = "^4.6.1"
joblib = "^1.3.2"
psycopg2 = "^2.9.9"
tqdm = "^4.66.1"
pandas = "2.0"
pyarrow = "^14.0.1"
fastapi = "^0.104.1"
passlib = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
