[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ahnsv <ahnsv@bc.edu>"]
license = "UNLICENSED"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
numpy = "^1.19.5"
uvicorn = "^0.15.0"
torch = "^1.9.1"
efficientnet-pytorch = "^0.7.1"
python-multipart = "^0.0.5"
albumentations = "^1.1.0"
torchvision = "^0.10.1"
requests = "^2.26.0"
gunicorn = "^20.1.0"
streamlit = "^1.2.0"
opencv-python-headless = "4.5.1.48"
jose = "^1.0.0"
fastapi = "^0.100.0"
sqlalchemy = "^2.0.19"
psycopg2 = "^2.9.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^2.0.3"}
bcrypt = "^4.0.1"
tqdm = "^4.65.0"
faiss-cpu = "^1.7.4"
pymongo = "^4.4.1"
markupsafe = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
